[tool.poetry]
name = "datatrail-cli"
version = "0.1.0"
description = "CHIME/FRB Datatrail CLI"
authors = ["CHIME FRB Project Office"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dtcli" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.29.0"
rich = "^13.3.5"
chime-frb-api = "^3.1.0"
pyaml = "^21.10.1"
cadcutils = "^1.5.1.1"
cadcdata = "^2.4"
cadctap = "^0.9.11"
mergedeep = "^1.3.4"
click-aliases = {git = "git@github.com:tjzegmott/click-aliases.git"}

[tool.poetry.scripts]
datatrail = "dtcli.cli:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-requests = "^2.30.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
