[tool.poetry]
name = "datatrail-cli"
version = "0.7.1"
description = "CHIME/FRB Datatrail CLI"
authors = ["CHIME FRB Project Office"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dtcli" }]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.3"
requests = "^2.29.0"
rich = "^13.3.5"
pyaml = "^21.10.1"
cadcutils = "^1.5.1.1"
cadcdata = "^2.5.0"
cadctap = "^0.9.11"
mergedeep = "^1.3.4"
dill = "^0.3.6"
lxml = "^4.9.2"
click-aliasing = "^1.0.0"

[tool.poetry.scripts]
datatrail = "dtcli.cli:cli"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-requests = "^2.30.0.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.11"
mkdocstrings = "^0.21.2"
mkdocs-click = "^0.8.0"
termynal = "^0.10.1"

[tool.flake8]
max-line-length=89
max-complexity=15

[tool.black]
line-length=89

[tool.pycodestyle]
max-line-length=89
ignore = "E203"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
